# ai4biz

./: .gitignore  LICENSE  README.md
api/: Dockerfile  docker-compose.yml  pyproject.toml
api/app/: main.py
api/app/agent/: main_agent.py  models.py  rag_agent.py  schemas.py
api/app/agent/controller/: __init__.py  act.py  crud.py
api/app/agent/crawler/: crawler.py
api/app/agent/crawler/tests/: crawl.py
api/app/agent/llm/: call.py
api/app/agent/vectorizer/: vectorizer.py
api/app/agent/vectorizer/tests/: vectorize.py
api/app/auth/: controller.py  middleware.py  schemas.py  utils.py
api/app/chat/channel/: controller.py  models.py  schemas.py
api/app/chat/connection/: models.py
api/app/chat/history/: adapter.py  history.py
api/app/chat/history/tests/: history.py
api/app/chat/message/: models.py  schemas.py
api/app/chat/operator/: models.py  schemas.py
api/app/chat/ticket/: models.py
api/app/db/: base.py  conn.py  crud.py  public_init.py  schema_init.py
api/app/endpoint/: controller.py  schemas.py  tg.py  ws.py
api/app/knowledge/: controller.py  indexer.py  models.py  parser.py  schemas.py
api/app/knowledge/tests/: parser.py
api/app/lib/: __init__.py  config.py  exceptions.py  logger.py  mixins.py
api/app/org/: controller.py  models.py  schemas.py
local/: compose.yml
web/: astro.config.mjs  components.json  package-lock.json  package.json  tsconfig.json
web/src/layouts/: Root.astro
web/src/pages/: index.astro
widget/: index.html  package-lock.json  package.json  vite.config.ts
widget/src/: App.svelte  main.ts
(+15 files in other folders)
